# Vega

./: .gitignore  .travis.yml  CMakeLists.txt  Default.xml  README.md  Setup.sh  setup.ps1  setup.py  setup.sh
Sandbox/: CMakeLists.txt
Sandbox/Module/DemoModule/: DemoModule.cpp
Sandbox/Plugins/Demo/: Demo.cpp  config.yml
Sandbox/Shader/DemoShader/: DemoShader.frag  DemoShader.vert
Sandbox/Shaders/Demo/: Demo.frag  Demo.vert  config.yml
Sandbox/Source/: Sandbox.cpp
Sandbox/Source/Sandbox/: DemoLayer.cpp  DemoLayer.hpp
Vega/: CMakeLists.txt
Vega/Include/: Platform.hpp  Std.hpp
Vega/Include/Core/: Application.hpp  Callback.hpp  Compiler.hpp  Config.hpp  ConfigType.hpp  Core.hpp  Gui.hpp  Module.hpp  Shader.hpp  SharedObject.hpp  Ui.hpp  Window.hpp
Vega/Include/Core/Loader/: ConfigLoader.hpp  Loader.hpp  PluginLoader.hpp
Vega/Include/Event/: Event.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
Vega/Include/Utility/: Args.hpp  Io.hpp  Settings.hpp
Vega/Source/: Vega.cpp  Vega.hpp
Vega/Source/Core/: Application.cpp  Callback.cpp  Compiler.cpp  Config.cpp  Shader.cpp  SharedObject.cpp
Vega/Source/Vega/: Application.cpp  Application.hpp  Camera.hpp  Core.hpp  EntityManager.hpp  EntryPoint.hpp  Event.cpp  Event.hpp  Input.cpp  Input.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Platform.hpp  Std.hpp  Transform.hpp  Vendor.hpp  Vertex.hpp  Window.cpp  Window.hpp
Vega/Source/Vega/Component/: Camera.hpp  Shader.hpp  Transform.hpp
Vega/Source/Vega/Core/: Application.cpp  Application.hpp  Callback.cpp  Callback.hpp  Compiler.cpp  Compiler.hpp  Config.cpp  Config.hpp  ConfigLoader.hpp  ConfigType.hpp  Core.hpp  EntryPoint.hpp  Filesystem.hpp  Gui.hpp  Io.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Module.hpp  ModuleLoader.cpp  ModuleLoader.hpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  ShaderLoader.cpp  ShaderLoader.hpp  ShaderUtilities.hpp  SharedObject.cpp  SharedObject.hpp  Window.cpp  Window.hpp
Vega/Source/Vega/Core/Loader/: ConfigLoader.hpp  Loader.hpp  PluginLoader.hpp
Vega/Source/Vega/Debug/: Core.hpp  DebugMenu.hpp  ResourceHierarchy.hpp  ShaderEditor.hpp
Vega/Source/Vega/Event/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
Vega/Source/Vega/ImGui/: ImGuiLayer.hpp
Vega/Source/Vega/System/: EventSystem.hpp
Vega/Source/Vega/Tmp/: Camera.hpp  Mesh.hpp  Model.cpp  Model.hpp
Vega/Source/Vega/Utility/: Io.hpp  Parser.hpp  Settings.hpp
Vega/Tmp/: Mesh.cpp  Mesh.hpp
engine/: CMakeLists.txt  Engine.h  Engine.hpp  engine.h
engine/source/: Application.h  Application.hpp  Camera.h  Camera.hpp  Core.h  EntryPoint.h  Event.h  Event.hpp  FwDecls.h  FwDecls.hpp  Input.h  Input.hpp  Layer.h  Layer.hpp  Mesh.h  Mesh.hpp  Model.h  Model.hpp  Shader.h  Shader.hpp  Singleton.h  Timestep.h  Transform.h  Transform.hpp  Vertex.h  Vertex.hpp  application.h  camera.h  entrypoint.h  fwdecls.h  mesh.h  model.h  shader.h  singleton.h  timestep.h  transform.h  vertex.h
sandbox/: CMakeLists.txt  Sandbox.cpp  sandbox.cpp
sandbox/source/: DemoLayer.hpp
